--- a/style.css
+++ b/style.css
@@ -1,7 +1,10 @@
 /* Estilo general */
+* {
+  font-family: 'Montserrat', sans-serif;
+}
+
 html,
 body {
-  font-family: 'Montserrat', sans-serif;
   margin: 0;
   padding: 0;
   height: 100%;
@@ -15,56 +18,203 @@ body {
   background: linear-gradient(135deg, #58a4a4, #2d5559);
 }
 
-/* Header */
+h1 {
+  margin: 25px;
+  color: #2d5559;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+/* Estilos generales del header */
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-color: #f4fbff;
-  padding: 15px 30px;
-  position: sticky;
+  padding: 0 30px;
+  height: 100px;
+  width: 100%;
+  position: fixed;
   top: 0;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  z-index: 10;
+  left: 0;
+  z-index: 1000;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  box-sizing: border-box;
 }
 
+/* Estilo del logo */
 .logo img {
-  height: 60px;
+  max-height: 60px;
+  width: auto;
 }
 
+/* Estilo del texto 'Menú Principal' */
 .menu-header {
-  font-size: 30px;
-  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 40px;
+  font-weight: 700;
   color: #2d5559;
   text-transform: uppercase;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
+  margin-left: 0;
+  text-align: center;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+/* Estilo del nuevo ícono como botón */
+.profile-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 60px;
+  height: 60px;
+  font-size: 48px;
+  color: #2d5559;
+  background-color: transparent;
+  border: none;
+  border-radius: 50%;
+  transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease;
+}
+
+.profile-button .material-icons {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: inherit;
+}
+
+.profile-button:hover {
+  transform: scale(1.1);
+  background-color: #2d5559;
+  color: #ffffff;
+}
+
+.profile-button:active {
+  background-color: #2d5559;
+  color: #ffffff;
+}
+
+/* Estilo del dropdown */
+.dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #f4fbff;
+  border: 1px solid #2d5559;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: 200px;
+  opacity: 0;
+  transform: translateY(-10px);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+.dropdown.show {
+  display: block;
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.dropdown .section-title {
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  color: #2d5559;
+  padding-bottom: 10px;
+}
+
+/* Estilo para los enlaces dentro del dropdown */
+.dropdown a {
+  display: block;
+  padding: 10px;
+  color: #2d5559;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.dropdown a:not(:last-child) {
+  border-bottom: 1px solid rgba(45, 85, 89, 0.2);
+  padding-bottom: 12px;
+  margin-bottom: 12px;
+}
+
+.dropdown a:hover {
+  background-color: #2d5559;
+  color: #f4fbff;
 }
 
 /* Caja Lateral Corredera */
 .sidebar {
   margin-top: 10px;
   position: fixed;
-  top: 90px;
-  left: -260px;
+  top: 110px;
+  left: -275px;
   width: 250px;
-  height: calc(100vh - 90px);
+  height: calc(100vh - 110px);
   background-color: #f4fbff;
-  border-radius: 15px;
+  border-radius: 15px 15px 0 0;
   box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
   transition: left 0.5s ease;
   padding: 20px;
   z-index: 9;
   overflow-y: auto;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.sidebar::-webkit-scrollbar {
+  display: none;
 }
 
 .sidebar.active {
   left: 0;
 }
 
+.menu-section {
+  margin-bottom: 20px;
+}
+
+.menu-section .section-title {
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+  color: #2d5559;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+/* Separador fino y difuminado entre secciones */
+.sidebar .menu-section:not(:last-child) {
+  border-bottom: 1px solid rgba(45, 85, 89, 0.1);
+  padding-bottom: 20px;
+  margin-bottom: 20px;
+}
+
+/* Estilo de los botones */
 .menu-button {
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   align-items: center;
-  padding: 12px 15px;
+  justify-content: center;
+  /* Asegura que el texto e íconos estén centrados */
+  width: auto;
+  /* Asegura que el botón ocupe todo el ancho */
+  height: 60px;
+  /* Tamaño uniforme para todos los botones */
+  padding: 0 15px;
   background-color: #f4fbff;
   color: #2d5559;
   text-decoration: none;
@@ -72,6 +222,7 @@ header {
   margin: 8px 0;
   border-radius: 8px;
   transition: all 0.3s ease;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .menu-button:hover {
@@ -84,30 +235,41 @@ header {
   font-size: 18px;
 }
 
-/* Botón de despliegue */
+/* Botón de despliegue - Ajustes */
 .toggle-btn {
   position: fixed;
   top: 50%;
-  left: -50px;
+  left: calc(-10px + 0%);
   transform: translateY(-50%);
   background-color: #f4fbff;
   color: #58a4a4;
   border: 2px solid #f4fbff;
-  border-radius: 50%;
-  padding: 15px;
+  border-radius: 0 50px 50px 0;
+  /* Esquinas redondeadas en un lado */
+  padding: 20px;
   cursor: pointer;
   font-size: 24px;
-  z-index: 10;
+  z-index: 9;
   transition: background-color 0.3s ease, left 0.5s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
 }
 
 .toggle-btn.active {
-  left: 250px;
+  left: 270px;
 }
 
 .toggle-btn:hover {
   background-color: #58a4a4;
   color: #f4fbff;
+}
+
+.toggle-btn i {
+  font-weight: bold;
+  font-size: 28px;
+  transform: scaleX(1.2);
 }
 
 /* Contenedor principal */
@@ -129,31 +291,33 @@ main {
   max-width: 1200px;
   width: 90%;
   border-radius: 12px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  margin-top: 100px;
 }
 
 /* Responsividad */
 @media (max-width: 768px) {
   .menu-button {
-    width: 100%;
-    height: 70px;
+      width: 100%;
+      height: 70px;
   }
 
   h1 {
-    font-size: 2rem;
-    margin: 120px 0 30px;
+      font-size: 2rem;
+      margin: 120px 0 30px;
   }
 
   .logo img {
-    height: 50px;
+      height: 50px;
   }
 
   nav {
-    flex-direction: column;
-    align-items: center;
+      flex-direction: column;
+      align-items: center;
   }
 
   form {
-    width: 90%;
+      width: 90%;
   }
 
   input[type="text"],
@@ -162,11 +326,11 @@ main {
   input[type="date"],
   textarea,
   select {
-    padding: 10px;
+      padding: 10px;
   }
 
   .materialOption {
-    flex-basis: 45%;
+      flex-basis: 45%;
   }
 }
 
@@ -203,6 +367,7 @@ select {
   transition: all 0.3s ease;
 }
 
+/* Enfoque de los campos de entrada */
 input[type="text"]:focus,
 input[type="email"]:focus,
 input[type="tel"]:focus,
@@ -229,4 +394,69 @@ select:focus {
 
 .submit-btn:hover {
   background-color: rgb(30, 65, 69);
+}
+
+/* Estilos del contenedor principal */
+.form-container {
+  width: 100%;
+  max-width: 800px;
+  margin: 10px auto;
+  padding: 20px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+/* Contenedor de opciones de material */
+#materialOptions {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+/* Opción individual de material */
+.materialOption {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+
+/* Campos de texto de material extra */
+#otrosMaterialText {
+  width: calc(100% - 24px);
+  /* Asegura que el campo ocupe el mismo espacio que los select y input */
+  padding: 12px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  transition: all 0.3s ease;
+  box-sizing: border-box;
+}
+
+/* Ajustes adicionales para los botones dentro del formulario */
+.submit-btn {
+  width: 100%;
+  padding: 15px;
+  font-size: 18px;
+  background-color: rgb(45, 85, 89);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.submit-btn:hover {
+  background-color: rgb(30, 65, 69);
+}
+
+select {
+  appearance: none; /* Ocultar estilos predeterminados del navegador */
+  -webkit-appearance: none; /* Para navegadores basados en WebKit */
+  -moz-appearance: none; /* Para Firefox */
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 8px;
+  border-radius: 4px;
+  cursor: pointer;
 }
