--- a/css/style.css
+++ b/css/style.css
@@ -80,6 +80,7 @@ header {
   border: none;
   border-radius: 50%;
   transition: transform 0.3s ease, color 0.3s ease, background-color 0.3s ease;
+  margin-right: 15px;
 }
 
 .profile-button .material-icons {
@@ -131,7 +132,6 @@ header {
   padding-bottom: 10px;
 }
 
-/* Estilo para los enlaces dentro del dropdown */
 .dropdown a {
   display: block;
   padding: 10px;
@@ -203,23 +203,20 @@ header {
   margin-bottom: 20px;
 }
 
-/* Estilo de los botones */
+/* Estilo de los botones en la barra lateral */
 .menu-button {
   font-family: 'Montserrat', sans-serif;
   display: flex;
   align-items: center;
-  justify-content: center;
-  /* Asegura que el texto e íconos estén centrados */
+  justify-content: flex-start;
   width: auto;
-  /* Asegura que el botón ocupe todo el ancho */
   height: 60px;
-  /* Tamaño uniforme para todos los botones */
   padding: 0 15px;
   background-color: #f4fbff;
   color: #2d5559;
   text-decoration: none;
   font-weight: 500;
-  margin: 8px 0;
+  margin: 8px;
   border-radius: 8px;
   transition: all 0.3s ease;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
@@ -232,7 +229,7 @@ header {
 
 .menu-button i {
   margin-right: 12px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 /* Botón de despliegue - Ajustes */
@@ -245,7 +242,6 @@ header {
   color: #58a4a4;
   border: 2px solid #f4fbff;
   border-radius: 0 50px 50px 0;
-  /* Esquinas redondeadas en un lado */
   padding: 20px;
   cursor: pointer;
   font-size: 24px;
@@ -254,7 +250,6 @@ header {
   display: flex;
   justify-content: center;
   align-items: center;
-
 }
 
 .toggle-btn.active {
@@ -385,7 +380,6 @@ select:focus {
 /* Campos de texto de material extra */
 #otrosMaterialText {
   width: calc(100% - 24px);
-  /* Asegura que el campo ocupe el mismo espacio que los select y input */
   padding: 12px;
   margin-bottom: 20px;
   border: 1px solid #ccc;
@@ -413,11 +407,8 @@ select:focus {
 
 select {
   appearance: none;
-  /* Ocultar estilos predeterminados del navegador */
   -webkit-appearance: none;
-  /* Para navegadores basados en WebKit */
   -moz-appearance: none;
-  /* Para Firefox */
   background-color: white;
   border: 1px solid #ccc;
   padding: 8px;
@@ -431,68 +422,57 @@ select {
 
 /* Ajustes para pantallas medianas */
 @media (max-width: 1024px) {
-
-  /* Estilos generales del header */
   header {
-      display: flex;
-      justify-content: space-between;
-      /* Los elementos estarán a los extremos */
-      align-items: center;
-      background-color: #f4fbff;
-      padding: 0 20px;
-      height: 100px;
-      width: 100%;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 1000;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      box-sizing: border-box;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f4fbff;
+    padding: 0 20px;
+    height: 100px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+    box-sizing: border-box;
   }
 
-  /* Estilo del logo */
   .logo img {
-      max-height: 50px;
-      /* Ajustar el tamaño */
-      width: auto;
+    max-height: 50px;
+    width: auto;
   }
 
-  /* Estilo del texto 'Menú Principal' */
   .menu-header {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 24px;
-      /* Reducir tamaño */
-      font-weight: 700;
-      color: #2d5559;
-      text-transform: uppercase;
-      letter-spacing: 5px;
-      flex-grow: 1;
-      /* Esto hace que el texto ocupe el centro */
-      text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 24px;
+    font-weight: 700;
+    color: #2d5559;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    flex-grow: 1;
+    text-align: center;
   }
 
-  /* Estilo del botón de perfil */
   .profile-button {
-      width: 50px;
-      height: 50px;
-      font-size: 36px;
-      /* Ajustar el tamaño */
+    width: 50px;
+    height: 50px;
+    font-size: 36px;
   }
-
 }
 
 /* Ajustes para pantallas pequeñas */
 @media (max-width: 768px) {
   header {
-      flex-direction: column;
-      align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 
   .sidebar {
-      left: -100%;
+    left: -100%;
   }
 
   .toggle-btn {
-      left: 0;
+    left: 0;
   }
 }
